// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Item should render Default 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-0"
    href="https://example.com"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <img
        alt="DSC07717"
        class="emotion-3 emotion-4"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset="https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="emotion-5 emotion-6"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 emotion-7"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 emotion-8"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithoutImage 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-0"
    href="https://example.com"
  >
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-3 emotion-4"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 emotion-5"
      >
        Foobar
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 emotion-6"
      >
        Editor
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`AuthorList Item should render WithoutJobTitle 1`] = `
<DocumentFragment>
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-0"
    href="https://example.com"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <img
        alt="DSC07717"
        class="emotion-3 emotion-4"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
        srcset="https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title=""
      />
    </div>
    <div
      class="emotion-5 emotion-6"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 emotion-7"
      >
        Foobar
      </h6>
    </div>
  </a>
</DocumentFragment>
`;
